@@ -1,3 +1,6 @@
+2003-01-08 TADA Tadashi <sho@spc.gr.jp>
+	* archive.rb: insert <div> into <form> in archive_dropdown.
+
 2003-01-01 TADA Tadashi <sho@spc.gr.jp>
 	* README.en: update. thanks Mizuho <gha@intrastore.cdc.com>.
 
